# workout_flask

./: README.md  app.py  pyproject.toml  requirements.txt
src/instance/: db.sqlite
src/workout_app/: __init__.py  auth.py  main.py  models.py  test.py
src/workout_app/static/: extended_beauty.css
src/workout_app/templates/: all_workouts.html  base.html  create_workout.html  index.html  profile.html  signin.html  signout.html  signup.html  update_workout.html
